<resources>
    <string name="app_name">Whriter</string>
    <string name="action_settings">Settings</string>

    <!--Editor-->
    <string name="place_holder_text">Your word, your thought…</string>
    <string name="saved">Saved </string>
    <string name="share_to">Share to…</string>
    <string name="save_to">Saved in </string>
    <string name="form_whriter">From Whriter</string>
    <string name="clear">Clear all content?</string>
    <string name="detail">Details</string>
    <string name="title_info">Name</string>
    <string name="count">Count</string>
    <string name="modify_date">Last modified</string>
    <string name="create_date">Create at</string>
    <!--Home-->
    <string name="title">Title</string>
    <string name="title_not_null">Title can not be null</string>
    <string name="name">Folder name</string>
    <string name="name_not_null">Folder name can not be null</string>
    <string name="press_back">Press again to exit</string>
    <string name="rename">rename</string>
    <string name="delete">delete</string>
    <string name="rename_title">Rename</string>
    <string name="share">Share to…</string>
    <string name="share_html">HTML</string>
    <string name="share_text">Plain text</string>
    <string name="share_picture">Picture</string>
    <string name="article">Article</string>
    <string name="folder">Folder</string>
    <!--Settings-->
    <string name="general">General</string>
    <string name="clear_all">Clear all files</string>
    <string name="use_lock">Lock screen when open app</string>
    <string name="use_sum">To avoid your private articles leakage </string>
    <string name="security">Security</string>
    <string name="lock_screen">Screen lock</string>
    <string name="lock_sum">Password</string>
    <string name="fingerprint">Fingerprint unlock</string>
    <string name="finger_sum">You can also use password in the meantime</string>
    <string name="relock">Re-lock apps</string>
    <string name="relock_sum">Immediately</string>
    <string name="helpfeed">Help and feedback</string>
    <string name="help">Help</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="about_us">About us</string>
    <string name="version">Version</string>
    <string name="regenera">Re-generate help documents for you</string>
    <string name="rege_sum">Check the help documents again in case of you forgot some details</string>

    <string name="clear_title">Clear all files? </string>
    <string name="clear_content">This action will remove all the files and folders in Whriter.</string>
    <!--Fingerprint-->
    <string name="status_error">Error: %1$s</string>
</resources>
