<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

    <TextView
        android:id="@+id/detail_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail_info"
        android:layout_below="@id/detail_info"
        android:layout_marginTop="16dp"
        android:text="@string/title_info"/>

    <TextView
        android:id="@+id/title_filed"
        style="@style/info_style"
        android:layout_below="@id/title"/>

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail_info"
        android:layout_below="@id/title_filed"
        android:layout_marginTop="16dp"
        android:text="@string/count"/>

    <TextView
        android:id="@+id/count_field"
        style="@style/info_style"
        android:layout_below="@id/count"/>

    <TextView
        android:id="@+id/create_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail_info"
        android:layout_below="@id/count_field"
        android:layout_marginTop="16dp"
        android:text="@string/create_date"/>

    <TextView
        android:id="@+id/create_field"
        style="@style/info_style"
        android:layout_below="@id/create_date"
        />

    <TextView
        android:id="@+id/modify_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/detail_info"
        android:layout_below="@id/create_field"
        android:layout_marginTop="16dp"
        android:text="@string/modify_date"/>

    <TextView
        android:id="@+id/modify_field"
        style="@style/info_style"
        android:layout_below="@id/modify_date"
        android:layout_marginBottom="24dp"/>
</RelativeLayout>